fix on mobile

--- a/sourse/pug/blocks/sBestWorks/_sBestWorks.scss
+++ b/sourse/pug/blocks/sBestWorks/_sBestWorks.scss
@@ -11,8 +11,8 @@
 	
 } // end.sBestWorks
 @media (max-width: 440px) {
-	.sBestWorks .wrapper-grid__pic-card .card-text {
-		bottom: 10px;
+	.wrapper-grid__card .card-text {
+		bottom: 35px;
 		left: 10px;
 		font-size: 13px;
 		line-height: 15px;
